--- a/PL/Admin/AdminWindow.xaml
+++ b/PL/Admin/AdminWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL.Admin"
         mc:Ignorable="d"
+        Icon="\Images\IsraelFlag.jpg" 
         Title="AdminWindow" Height="400" Width="800" Background="LightBlue">
     <Grid>
         <Grid.ColumnDefinitions>
