--- a/PL/Task/TaskWindow.xaml
+++ b/PL/Task/TaskWindow.xaml
@@ -5,6 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL.Task"
         mc:Ignorable="d"
+               Icon="\Images\IsraelFlag.jpg" 
+
         Title="TaskWindow" Height="800" Width="1000"
         DataContext="{Binding RelativeSource={RelativeSource Mode= Self}}">
 
