--- a/PL/Task/TasksForWorkerList.xaml
+++ b/PL/Task/TasksForWorkerList.xaml
@@ -1,37 +1,33 @@
-﻿<Window x:Class="PL.Task.ChoseDependency"
+﻿<Window x:Class="PL.Task.TasksForWorkerList"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL.Task"
         mc:Ignorable="d"
-               Icon="\Images\IsraelFlag.jpg" 
-
-        Title="ChoseDependency" Height="450" Width="800"
+        Title="TasksForWorkerList" Height="450" Width="800"         
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="51*"/>
-            <ColumnDefinition Width="149*"/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="40*"/>
             <RowDefinition Height="500*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Grid Height="auto" Grid.Row="0" Width="auto" Grid.ColumnSpan="2">
+        <Grid HorizontalAlignment="Stretch" Height="auto" Grid.Row="0" VerticalAlignment="Stretch" Width="auto">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
         </Grid>
-        <ListView ItemsSource="{Binding Path=TaskList}" MouseDoubleClick="ListView_MouseDoubleClick" Grid.ColumnSpan="2" Margin="0,28,0,0" Grid.RowSpan="2"  >
+
+        <ListView Grid.Row="1" ItemsSource="{Binding Path=TaskList}" MouseDoubleClick="ListView_MouseDoubleClick"  >
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
                 </GridView>
             </ListView.View>
         </ListView>
+        <Button Content="Chose the Task" Visibility="{Binding DoYouWantThatTask,Mode=OneWay,Converter={StaticResource BoolToVisibilityConverterKey}}" HorizontalAlignment="Left" Margin="382,351,0,0" Grid.Row="1" VerticalAlignment="Top" Height="50" Width="100" Click="Chose_Click" Grid.RowSpan="2"/>
 
     </Grid>
 </Window>
