--- a/PL/Worker/WorkerListWindow.xaml
+++ b/PL/Worker/WorkerListWindow.xaml
@@ -5,6 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL.Worker"
         mc:Ignorable="d"
+               Icon="\Images\IsraelFlag.jpg" 
+
         Title="WorkerListWindow" Height="640" Width="800"
       DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
     <!--External Grid-->
