We added the Schedule interface, the BO layer, we implemented it, and we fixed some things in the back code of the GANT window

--- a/PL/Task/TasksForWorkerList.xaml
+++ b/PL/Task/TasksForWorkerList.xaml
@@ -20,7 +20,7 @@
             </Grid.ColumnDefinitions>
         </Grid>
 
-        <ListView Grid.Row="1" ItemsSource="{Binding Path=TaskList}" MouseDoubleClick="ListView_MouseDoubleClick"  >
+        <ListView Grid.Row="1" ItemsSource="{Binding Path=TaskList}"   >
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
