--- a/PL/Admin/GanttChart.xaml
+++ b/PL/Admin/GanttChart.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="GanttChart" Height="450" Width="800">
     <Grid>
-        <DataGrid Initialized="dataGridSched_Initialized"
+        <DataGrid Initialized="dataGridSched_Initialized"></DataGrid>
         
     </Grid>
 </Window>
