--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
        Icon="\Images\IsraelFlag.jpg" 
         Title="MainWindow" Height="400" Width="600"
-        DataContext="{Binding RelativeSource={RelativeSource Self}}" Background="#064773">
+        DataContext="{Binding RelativeSource={RelativeSource Self}}" >
 
 
     <Grid >
@@ -20,25 +20,27 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
+        <Image Source="/Images/New-Project-16.jpg" Grid.ColumnSpan="2" Margin="-35,-61,-47,-59" Grid.RowSpan="2"></Image>
         <!--<Label Grid.Row="0"  HorizontalAlignment="Left" Margin="70,-140,0,0" VerticalAlignment="Top" Height="54" Width="109" BorderBrush="LightBlue" BorderThickness="1" Grid.ColumnSpan="2"/>-->
-        <Image Grid.Row="0" Grid.Column ="0" Source="/Images/LogoHaatsmautParty.png" Margin="-19,17,137,10" Grid.ColumnSpan="2"/>
-        <Label Grid.Row="0" Grid.Column="1" Content="{Binding Clock}" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="69" Width="130" BorderBrush="WhiteSmoke"   BorderThickness="1"/>
+        <Label Grid.Row="0" Content="{Binding Clock}" HorizontalAlignment="Left" Margin="444,10,0,0" VerticalAlignment="Top" Height="45" Width="146" BorderBrush="#FFFFE4E1" FontFamily="Arial Black" FontSize="8"   BorderThickness="2" Grid.ColumnSpan="2"/>
+        <Label Grid.Row="0" Content="{Binding StartDateProject }" HorizontalAlignment="Left" Margin="444,72,0,0" VerticalAlignment="Top" Height="23" Width="146" BorderBrush="#FFFFE4E1" FontFamily="Arial Black" FontSize="8"   BorderThickness="2" Grid.ColumnSpan="2"/>
 
 
 
-        <Button Content="Sign In" HorizontalAlignment="Left" Margin="148,20,0,0" VerticalAlignment="Top" Height="28" Width="86" Click="SignIn_Click" Grid.Row="1" Background="WhiteSmoke"/>
-        <Button Content="Log In" HorizontalAlignment="Left" Margin="27,20,0,0" VerticalAlignment="Top" Height="28" Width="86" Click="LogIn_Click" Grid.Row="1" Background="WhiteSmoke"/>
+        <Button Content="Sign In"  BorderBrush="#FFFFE4E1" Foreground="#FFFFE4E1" FontFamily="Arial Black" FontSize="14"  FontStyle="Normal"  BorderThickness="2" HorizontalAlignment="Left" Margin="111,30,0,0" VerticalAlignment="Top" Height="37" Width="86"  Click="SignIn_Click" Background="{x:Null}" Grid.Row="1"/>
+        <Button Content="Log In" BorderBrush="#FFFFE4E1" Foreground="#FFFFE4E1" FontFamily="Arial Black" FontSize="12"  FontStyle="Normal"  BorderThickness="2"  HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Height="37" Width="86" Click="LogIn_Click" Grid.Row="1" Background="{x:Null}"/>
 
-        <Button Margin="288,9,131,38" Click="PlayButton_Click" Background="WhiteSmoke" Grid.Row="1" Height="30" Width="33" />
-        <Image Source="/Images/play-buttton.png" Height="15" Width="16" Margin="298,17,136,45" Grid.Row="1" ></Image>
+        <Button Margin="27,23,381,246"  BorderThickness="2" BorderBrush="#FFFFE4E1" Click="PlayButton_Click" Background="{x:Null}" >
+            <Image Source="/Images/play-buttton.png" Height="15" Width="16"  Grid.Row="1" ></Image>
+        </Button>
 
-        <Button Margin="337,9,83,38" Click="PauseButton_Click" Background="WhiteSmoke" Grid.Row="1" Height="30" Width="33" >
+        <Button BorderBrush="#FFFFE4E1"  BorderThickness="2" Margin="87,24,322,245" Click="PauseButton_Click" Background="{x:Null}" >
             <Image Source="/Images/bouton-pause.png" Height="15" Width="21"></Image>
         </Button>
-        <Button Margin="382,9,38,38" Click="StopButton_Click" Background="WhiteSmoke" Grid.Row="1" Height="30" Width="33" >
-            <Image Source="/Images/arret.png" Height="18" Width="15"></Image>
+        <Button BorderBrush="#FFFFE4E1"  BorderThickness="2" Margin="147,24,261,245" Click="StopButton_Click" Background="{x:Null}" >
+            <Image Source="/Images/arret.png" Height="22" Width="21"></Image>
         </Button>
-        <MediaElement HorizontalAlignment="Left" Height="100" Margin="127,256,0,0" VerticalAlignment="Top" Width="100"/>
+        <MediaElement HorizontalAlignment="Left" Height="100" Margin="122,261,0,0" VerticalAlignment="Top" Width="100" Grid.RowSpan="2"/>
 
 
 
