--- a/PL/WorkerMainWindow.xaml
+++ b/PL/WorkerMainWindow.xaml
@@ -8,7 +8,7 @@
         Icon="\Images\IsraelFlag.jpg" 
 
         Title="WorkerMainWindow" Height="450" Width="800"
-         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}" Background="">
+         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
     <Grid>
         <Label Content="{Binding Hello}" Margin="198,83,198,281" FontSize="20" FontFamily="Arial Black"></Label>
         <Button Content="Chose a Task"   FontSize="20" FontFamily="Arial Black" Margin="127,171,452,185" Click="ButtonChoseTask_Click" Background="WhiteSmoke" ></Button>
