--- a/PL/Task/TaskListWindow.xaml
+++ b/PL/Task/TaskListWindow.xaml
@@ -34,7 +34,7 @@
        ItemsSource="{Binding Source={StaticResource TaskStatusKey }}"   
              SelectionChanged="ComboBoxStatusTask_SelectionChanged" />
         </Grid>
-        <ListView Grid.Row="1" ItemsSource="{Binding Path=TaskList}" MouseDoubleClick="ListView_MouseDoubleClick" MouseLeftButtonUp="ChooceTaskToDelete_click" >
+        <ListView Grid.Row="1" ItemsSource="{Binding Path=TaskList}" MouseDoubleClick="ListView_MouseDoubleClick" MouseLeftButtonUp="ChooceTaskToDelete_click" SelectionChanged="ListView_SelectionChanged" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
