--- a/PL/Worker/SignInWindow.xaml
+++ b/PL/Worker/SignInWindow.xaml
@@ -5,15 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL.Worker"
         mc:Ignorable="d"
-        Title="SignInWindow" Height="200" Width="300" Background="#AAB2E6" DataContext="{Binding RelativeSource={RelativeSource Self}}">
+        Title="SignInWindow" Height="200" Width="300"  DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <Grid>
-        <Grid.ColumnDefinitions>
+        <Image Source="\Images\Backround-blurred.jpg" Margin="-7,-41,0,-41" ></Image>
+        <!--<Grid.ColumnDefinitions>
             <ColumnDefinition Width="27*"/>
             <ColumnDefinition Width="73*"/>
-        </Grid.ColumnDefinitions>
-        <Image Source="" Grid.ColumnSpan="3" Opacity="0.8" Margin="-61,-69,-27,-69" Grid.RowSpan="3"></Image>
+        </Grid.ColumnDefinitions>-->
 
-        <TextBox Text="{Binding ID, Mode=OneWayToSource, Converter={StaticResource ConvertStringToIntKey}}" Background="{x:Null}" BorderBrush="Black" HorizontalAlignment="Center" Margin="0,69,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="132" Height="23" Grid.Column="1"/>
+
+        <TextBox   Text="{Binding ID, Mode=OneWayToSource, Converter={StaticResource ConvertStringToIntKey }}" Background="{x:Null}"   BorderBrush="Black"  HorizontalAlignment="Center" Margin="0,69,0,0"  VerticalAlignment="Top" Width="132" Height="23" Grid.Column="1" />
+
         <Label Content="Enter ID:" FontFamily="Arial Black" FontSize="10" HorizontalAlignment="Left" Margin="23,69,0,0" VerticalAlignment="Top" Width="109" Height="23" Grid.ColumnSpan="2"/>
         <Button Content="Enter"  FontSize="10" HorizontalAlignment="Left" FontFamily="Arial Black" Background="{x:Null}" BorderBrush="Black" Margin="152,143,0,0" VerticalAlignment="Top" Click="WorkerWindow_click" Height="22" Width="46" Grid.Column="1"/>
 
