--- a/PL/Worker/WorkerWindow.xaml
+++ b/PL/Worker/WorkerWindow.xaml
@@ -8,7 +8,7 @@
         Title="WorkerWindow" Height="450" Width="400"
                Icon="\Images\IsraelFlag.jpg" 
 
-        DataContext="{Binding MyWorker, RelativeSource={RelativeSource Self}, Mode=TwoWay}">
+        DataContext="{Binding  RelativeSource={RelativeSource Self}}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40*"/>
@@ -22,45 +22,52 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-
+            <Image Source="\Images\Backround-blurred.jpg" Margin="-60,-350,-260,-704" Grid.ColumnSpan="2"/>
 
         </Grid>
 
-        <Label Content="Id:" HorizontalAlignment="Left" Margin="93,40,0,0" FontSize="12" FontFamily="Arial Black" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="90"/>
-        <Label Content="Name:" HorizontalAlignment="Left" Margin="93,80,0,0" FontSize="12" FontFamily="Arial Black" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="90"/>
-        <Label Content="Level:" HorizontalAlignment="Left" Margin="93,120,0,0" FontSize="12" FontFamily="Arial Black" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="90"/>
-        <Label Content="PhoneNumber:" HorizontalAlignment="Left" Margin="93,160,0,0" FontSize="12" FontFamily="Arial Black" Grid.Row="1" VerticalAlignment="Top" Height="29" Width="90"/>
-        <Label Content="Cost:" HorizontalAlignment="Left" Margin="93,200,0,0" FontSize="12" FontFamily="Arial Black" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="90"/>
-        <Label Content="Task Id:" HorizontalAlignment="Left" Margin="93,240,0,0" FontSize="12" FontFamily="Arial Black" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="90"/>
-        <Label Content="active:" HorizontalAlignment="Left" Margin="93,280,0,0" FontSize="12" FontFamily="Arial Black" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="90"/>
+        <Label Content="Id:" HorizontalAlignment="Left" Margin="73,28,0,0" FontSize="12" FontFamily="Arial Black" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="90"/>
+        <Label Content="Name:" HorizontalAlignment="Left" Margin="73,68,0,0" FontSize="12" FontFamily="Arial Black" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="90"/>
+        <Label Content="Level:" HorizontalAlignment="Left" Margin="73,113,0,0" FontSize="12" FontFamily="Arial Black" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="90"/>
+        <Label Content="PhoneNumber:" HorizontalAlignment="Left" Margin="73,148,0,0" FontSize="12" FontFamily="Arial Black" Grid.Row="1" VerticalAlignment="Top" Height="29" Width="108"/>
+        <Label Content="Cost:" HorizontalAlignment="Left" Margin="73,185,0,0" FontSize="12" FontFamily="Arial Black" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="90"/>
+        <Label Content="Task Id:" HorizontalAlignment="Left" Margin="73,223,0,0" FontSize="12" FontFamily="Arial Black" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="90"/>
 
-        <TextBox Text="{Binding Id, Mode=TwoWay, NotifyOnValidationError=true,  ValidatesOnExceptions=true}" 
-                 IsEnabled="{Binding Id, Mode=OneTime, Converter={StaticResource ConverIdToBoolKey}}" 
-            HorizontalAlignment="Left" Margin="200,40,0,0" Grid.Row="1" TextWrapping="Wrap"  VerticalAlignment="Top" Width="95" Height="25"/>
-        <TextBox Text="{Binding Name, Mode=TwoWay, NotifyOnValidationError=true,  ValidatesOnExceptions=true}"
-            HorizontalAlignment="Left" Margin="200,80,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="95" Height="25"/>
+        <Label Content="Task Alias:" HorizontalAlignment="Left" Margin="73,280,0,0" FontSize="12" FontFamily="Arial Black" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="90"/>
+
+        <Label Content="active:" HorizontalAlignment="Left" Margin="73,319,0,0" FontSize="12" FontFamily="Arial Black" Grid.Row="1" VerticalAlignment="Top" Height="25" Width="90"/>
+
+        <TextBox Text="{Binding  MyWorker.Id, Mode=TwoWay, NotifyOnValidationError=true,  ValidatesOnExceptions=true}" 
+                 IsEnabled="{Binding MyWorker.Id, Mode=OneTime, Converter={StaticResource ConverIdToBoolKey}}" 
+            HorizontalAlignment="Left" Margin="200,28,0,0" Grid.Row="1" TextWrapping="Wrap"  VerticalAlignment="Top" Width="132" Height="25"/>
+        <TextBox Text="{Binding MyWorker.Name, Mode=TwoWay, NotifyOnValidationError=true,  ValidatesOnExceptions=true}"
+            HorizontalAlignment="Left" Margin="200,68,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="132" Height="25"/>
         <ComboBox 
              ItemsSource="{Binding Source={StaticResource WorkerExperienceCollectionKey}}"
             SelectedValue="{Binding LevelOfWorker, Mode=TwoWay}"
-            HorizontalAlignment="Left" Margin="200,120,0,0" Grid.Row="1" VerticalAlignment="Top" Width="95" Height="25" SelectionChanged="ComboBox_LevelChangedWorker"/>
+            HorizontalAlignment="Left" Margin="200,113,0,0" Grid.Row="1" VerticalAlignment="Top" Width="132" Height="25" SelectionChanged="ComboBox_LevelChangedWorker"/>
         <TextBox 
-            Text="{Binding PhoneNumber, Mode=TwoWay, NotifyOnValidationError=true,  ValidatesOnExceptions=true}"
-            HorizontalAlignment="Left" Margin="200,160,0,0" Grid.Row="1" TextWrapping="Wrap"  VerticalAlignment="Top" Width="95" Height="25"/>
+            Text="{Binding MyWorker.PhoneNumber, Mode=TwoWay, NotifyOnValidationError=true,  ValidatesOnExceptions=true}"
+            HorizontalAlignment="Left" Margin="200,148,0,0" Grid.Row="1" TextWrapping="Wrap"  VerticalAlignment="Top" Width="132" Height="25"/>
         <TextBox 
-            Text="{Binding Cost, Mode=TwoWay, NotifyOnValidationError=true,  ValidatesOnExceptions=true}"
-            HorizontalAlignment="Left" Margin="200,200,0,0" Grid.Row="1" TextWrapping="Wrap"  VerticalAlignment="Top" Width="95" Height="25"/>
-        <TextBox 
+            Text="{Binding MyWorker.Cost, Mode=TwoWay, NotifyOnValidationError=true,  ValidatesOnExceptions=true}"
+            HorizontalAlignment="Left" Margin="200,0,0,0" Grid.Row="1" TextWrapping="Wrap"  VerticalAlignment="Center" Width="102" Height="25"/>
+        <!--<TextBox 
             Text="{Binding Task.Id, Mode=TwoWay, NotifyOnValidationError=true,  ValidatesOnExceptions=true}"
-            HorizontalAlignment="Left" Margin="200,240,0,0" Grid.Row="1" TextWrapping="Wrap"  VerticalAlignment="Top" Width="95" Height="25"/>
-        <CheckBox Content="Active" 
-                  IsChecked="{Binding active, Mode=TwoWay ,NotifyOnValidationError=true,  ValidatesOnExceptions=true}"
-                  HorizontalAlignment="Left" Margin="200,280,0,0" Grid.Row="1" VerticalAlignment="Top" Width="95" Height="25"/>
+            HorizontalAlignment="Left" Margin="200,240,0,0" Grid.Row="1" TextWrapping="Wrap"  VerticalAlignment="Top" Width="95" Height="25"/>-->
 
+        <Button Content="Browse&#xD;&#xA; Tasks" Visibility="{Binding IsThirdStageAndWithoutTask , Mode=OneWay ,Converter={StaticResource BoolToVisibilityConverterKey }}" Background="WhiteSmoke"  FontFamily="Arial Black" Click="ButtonChoseTask_Click" Margin="322,223,10,144" Grid.Row="1"  ></Button>
+        <CheckBox Content="Active" 
+                  IsChecked="{Binding MyWorker.active, Mode=TwoWay ,NotifyOnValidationError=true,  ValidatesOnExceptions=true}"
+                  HorizontalAlignment="Left" Margin="200,324,0,0" Grid.Row="1" VerticalAlignment="Top" Width="95" Height="25"/>
+
+        <TextBlock  Background="WhiteSmoke"  Text="{Binding MyWorker.Task.Id }" Margin="200,228,91,149" Grid.Row="1"/>
+        <TextBlock Background="WhiteSmoke" Text="{Binding MyWorker.Task.Alias }" Margin="200,267,68,97" Grid.Row="1"/>
         <Button 
              Grid.Row="1" 
-             Content="{Binding Id, Mode=OneTime, Converter={StaticResource ConverIdWorkerToContentKey}}" 
-             HorizontalAlignment="Center" Margin="0,314,0,0"  VerticalAlignment="Top" Padding="5" 
-             Click="AddOrUpdate_Click" RenderTransformOrigin="53.083,-1.767" Height="20" Width="64" FontSize="10"/>
+             Content="{Binding MyWorker.Id, Mode=OneTime, Converter={StaticResource ConverIdWorkerToContentKey}}" 
+             HorizontalAlignment="Left" Background="WhiteSmoke"  Margin="127,354,0,0"  VerticalAlignment="Top" Padding="5" 
+             Click="AddOrUpdate_Click" RenderTransformOrigin="53.083,-1.767" Height="28" Width="88" FontSize="10"/>
 
 
 
